# EA_3

./: .gitignore  CMakeLists.txt  README.md
Applications/TSP/: CMakeLists.txt  main.cpp
Applications/TSP/include/: TSP.hpp
Applications/TSP/src/: TSP.cpp
Dao/: CMakeLists.txt
Dao/include/Evolution/: Crossover.hpp  Diversity.hpp  Evolution.hpp  Population.hpp  Selection.hpp
Dao/include/Utils/: utils.hpp
Dao/src/Evolution/: Corssover.cpp  Diversity.cpp  Evolution.cpp  Population.cpp  Selection.cpp
Dao/src/Utils/: utils.cpp
include/Evolution/: Population.hpp  Selection.hpp
sim_try/: .gitignore
sim_try/sim_try/: .gitignore  CubeRobot.cpp  CubeRobot.hpp  Evo_func.cpp  Evo_func.hpp  Robot.cpp  Robot.hpp  SimulatorBase.cpp  SimulatorBase.hpp  Visualize.cpp  Visualize.hpp  bestG_cross_1.csv  ground.cpp  ground.hpp  lc_cross_1.csv  main.cpp  utils.cpp  utils.hpp
sim_try/sim_try.xcodeproj/: project.pbxproj
sim_try/sim_try.xcodeproj/project.xcworkspace/xcuserdata/qianhuangli.xcuserdatad/: UserInterfaceState.xcuserstate
sim_try/sim_try.xcodeproj/xcshareddata/xcschemes/: sim_try.xcscheme
sim_try/sim_try/Applications/Draw/: Canvas.cpp  Canvas.hpp
sim_try/sim_try/Evolution/: Corssover.cpp  Crossover.hpp  Evolution.hpp  Population.cpp  Population.hpp  Selection.hpp
sim_try/sim_try/Utils/: utils.hpp
src/Evolution/: Evolution.cpp
src/Utils/: utils.cpp
try_glut/: .gitignore
try_glut/try_glut/: ground.cpp  ground.hpp  main.cpp
try_glut/try_glut.xcodeproj/: project.pbxproj
(+4 files in other folders)
